# GPX-Animator-GPU

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  TERMS.md
.agents/skills/integrate-completed-branches/: SKILL.md
.agents/skills/integrate-completed-branches/agents/: openai.yaml
.agents/skills/worktree-feature-task/: SKILL.md
.agents/skills/worktree-feature-task/agents/: openai.yaml
docs/: mobile-android.md  nearby-places.md  poi-gateway-contract.yaml  route-landmarks.md
legacy-web/: index.html  package-lock.json  package.json  server.mjs  start-gpu-animator.cmd  styles.css
legacy-web/js/: app.js  exporter.js  geo.js  gpx.js  overlay.js  renderer.js
legacy-web/samples/: taipei-riverside.gpx
legacy-web/scripts/: build-exe.mjs
legacy-web/test/: core.test.mjs
mobile-android/: build.gradle.kts  settings.gradle.kts
mobile-android/app/: build.gradle.kts  proguard-rules.pro
mobile-android/app/schemas/com.gpxanimator.mobile.data.RideDatabase/: 1.json
mobile-android/app/src/main/: AndroidManifest.xml
mobile-android/app/src/main/java/com/gpxanimator/mobile/: GpxAnimatorRideApplication.kt  MainActivity.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/data/: RideDaos.kt  RideDatabase.kt  RideModels.kt  RideRepository.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/gpx/: GpxDocumentWriter.kt  GpxExporter.kt  RideFileActions.kt  RideFinalizer.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/locale/: AppLanguage.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/recording/: LocationProcessing.kt  RecordingController.kt  RecordingLease.kt  RideRecordingService.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/recovery/: StartupRecoveryCoordinator.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/sync/: DriveAuthorization.kt  DriveErrorClassifier.kt  DriveFolderResolver.kt  DriveRestClient.kt  DriveSyncCoordinator.kt  DriveSyncEpoch.kt  DriveUploadWorker.kt
mobile-android/app/src/main/java/com/gpxanimator/mobile/ui/: GpxAnimatorRideApp.kt  RideUiModels.kt  RideViewModel.kt
mobile-android/app/src/main/res/drawable/: ic_launcher_foreground.xml  ic_launcher_foreground_adaptive.xml  ic_launcher_monochrome.xml  ic_stat_ride.xml
mobile-android/app/src/main/res/mipmap-anydpi-v26/: ic_launcher_round.xml
mobile-android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
mobile-android/app/src/main/res/values-zh-rTW/: strings.xml
mobile-android/app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  file_paths.xml
mobile-android/app/src/test/java/com/gpxanimator/mobile/gpx/: GpxDocumentWriterTest.kt
mobile-android/app/src/test/java/com/gpxanimator/mobile/locale/: AppLanguageTest.kt
mobile-android/app/src/test/java/com/gpxanimator/mobile/recording/: LocationProcessingTest.kt  RecordingRecoveryPolicyTest.kt
native/d3d11-renderer/: Cargo.toml
native/d3d11-renderer/src/: lib.rs
native/desktop-app/: Cargo.toml
native/desktop-app/src/: export.rs  lib.rs  main.rs  project.rs  secrets.rs  ui.rs
native/gpx-core/: Cargo.toml
native/gpx-core/examples/: inspect.rs  inspect_raw.rs
native/gpx-core/src/: lib.rs
native/gpx-core/tests/: golden_0706.rs  mobile_ride.rs
native/gpx-core/tests/fixtures/: 0706-route.gpx  mobile-ride.gpx
native/mp4-output/: Cargo.toml
native/mp4-output/src/: lib.rs
native/nvenc-engine/: Cargo.toml
native/nvenc-engine/src/: lib.rs
native/places-core/: Cargo.toml
native/places-core/examples/: poi_live_benchmark.rs  verify_release_pack.rs
native/places-core/src/: domain.rs  lib.rs  pack.rs  providers.rs  service.rs  store.rs
native/places-core/tests/: provider_benchmark.rs
native/scene-core/: Cargo.toml
native/scene-core/src/: lib.rs
packaging/: README.md  build_overture_pack.py  poi-manifest.example.json  sea-main.cjs
(+11 files in other folders)
