[package]
name = "places-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde.workspace = true
serde_json = "1"
thiserror.workspace = true
ureq = "3"
rusqlite.workspace = true
sha2.workspace = true
ed25519-dalek.workspace = true
zstd.workspace = true
